--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=0.75">
    <title>MINIMAL</title>
-   <link rel="stylesheet" href="/css/style.min.css">
+   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
          </span>
 
          <div class="modal__title title">Welcome to</div>
-         <img src="/img/Logo.svg" class="modal__logo">
+         <img src="img/Logo.svg" class="modal__logo">
          <div class="modal__line line"></div>
          <div class="modal__form column">
             <input class="modal__input" type="text" id="username" name="username" placeholder="Username">
@@ -40,11 +40,11 @@
       <container class="container">
          <header class="header row">
             <div class="header__logo">
-               <img src="/img/Logo.svg">
+               <img src="img/Logo.svg">
             </div>
 
             <div id="burger" class="header__burger">
-               <img src="/img/Burger.svg">
+               <img src="img/Burger.svg">
             </div>
             <nav id="menu" class="menu">
                <ul class="menu__list">
@@ -91,21 +91,21 @@
             <div class="brands__line line"></div>
             <div class="brands__cards row">
                <div class="card column">
-                  <img src="/img/Card1.png" alt="" class="card__img">
+                  <img src="img/Card1.png" alt="" class="card__img">
                   <a class="card__title title">SET a target</a>
                   <a class="card__hh hh">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius
                      enim in eros elementum tristique.</a>
                </div>
 
                <div class="card column">
-                  <img src="/img/Card2.png" alt="" class="card__img">
+                  <img src="img/Card2.png" alt="" class="card__img">
                   <a class="card__title title">design a solution</a>
                   <a class="card__hh hh">Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam
                      libero vitae erat.</a>
                </div>
 
                <div class="card column">
-                  <img src="/img/Card3.png" alt="" class="card__img">
+                  <img src="img/Card3.png" alt="" class="card__img">
                   <a class="card__title title">track the progress</a>
                   <a class="card__hh hh">Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem
                      vitae risus tristique posuere.</a>
@@ -133,19 +133,19 @@
 
                   <div class="tabs__item row active" id="tab_1">
                      <div class="tabs__card column">
-                        <img src="/img/c1.png" alt="">
+                        <img src="img/c1.png" alt="">
                         <a class="tabs__title title">woods</a>
                         <a class="tabs__hh hh">Photography</a>
                      </div>
 
                      <div class="tabs__card column">
-                        <img src="/img/c2.png" alt="">
+                        <img src="img/c2.png" alt="">
                         <a class="tabs__title title">path</a>
                         <a class="tabs__hh hh">Photography</a>
                      </div>
 
                      <div class="tabs__card column">
-                        <img src="/img/c3.png" alt="">
+                        <img src="img/c3.png" alt="">
                         <a class="tabs__title title">waves</a>
                         <a class="tabs__hh hh">Photography</a>
                      </div>
@@ -153,19 +153,19 @@
 
                   <div class="tabs__item row" id="tab_2">
                      <div class="tabs__card column">
-                        <img src="/img/c4.png" alt="">
+                        <img src="img/c4.png" alt="">
                         <a class="tabs__title title">town</a>
                         <a class="tabs__hh hh">Website</a>
                      </div>
 
                      <div class="tabs__card column">
-                        <img src="/img/c5.png" alt="">
+                        <img src="img/c5.png" alt="">
                         <a class="tabs__title title">mountain</a>
                         <a class="tabs__hh hh">Website</a>
                      </div>
 
                      <div class="tabs__card column">
-                        <img src="/img/c6.png" alt="">
+                        <img src="img/c6.png" alt="">
                         <a class="tabs__title title">camera</a>
                         <a class="tabs__hh hh">Website</a>
                      </div>
@@ -187,22 +187,22 @@
                <div class="slider">
                   <div class="slider__line row">
                      <div class="slider__block column">
-                        <img src="/img/s1.png" alt="" class="slider__img">
+                        <img src="img/s1.png" alt="" class="slider__img">
                         <a class="slider__title title">Ron Swanson</a>
                         <a class="slider__hh hh">Founder</a>
                      </div>
                      <div class="slider__block column">
-                        <img src="/img/s2.png" alt="" class="slider__img">
+                        <img src="img/s2.png" alt="" class="slider__img">
                         <a class="slider__title title">Julia Depish</a>
                         <a class="slider__hh hh">Marketing</a>
                      </div>
                      <div class="slider__block column">
-                        <img src="/img/s3.png" alt="" class="slider__img">
+                        <img src="img/s3.png" alt="" class="slider__img">
                         <a class="slider__title title">Danny Devry</a>
                         <a class="slider__hh hh">Designer</a>
                      </div>
                      <div class="slider__block column">
-                        <img src="/img/s4.png" alt="" class="slider__img">
+                        <img src="img/s4.png" alt="" class="slider__img">
                         <a class="slider__title title">Lisa Smith</a>
                         <a class="slider__hh hh">Developer</a>
                      </div>
@@ -219,17 +219,17 @@
 
    <section class="section gray">
       <container class="container">
-         <img src="/img/Apos.svg" alt="" class="apos">
+         <img src="img/Apos.svg" alt="" class="apos">
          <div class="report__row row">
             <div class="report__column column">
                <a class="report__hh hh">“I love these guys! They did a great job. I would recommend them to anyone.”</a>
-               <img src="/img/Von.png" alt="" class="report__avatar">
+               <img src="img/Von.png" alt="" class="report__avatar">
                <a class="report__title title">Julius Von Uberstien</a>
             </div>
             <div class="report__line"></div>
             <div class="report__column column">
                <a class="report__hh hh">“Elexis Corp. has grown immensely with the help of Minimal.”</a>
-               <img src="/img/Rachel.png" alt="" class="report__avatar">
+               <img src="img/Rachel.png" alt="" class="report__avatar">
                <a class="report__title title">Rachel Stamos</a>
             </div>
          </div>
@@ -294,7 +294,7 @@
             <div class="socials__line line"></div>
             <div class="socials__row row">
                <div class="socials__item column">
-                  <div class="item__icon"><img src="/img/Mark.png" alt=""></div>
+                  <div class="item__icon"><img src="img/Mark.png" alt=""></div>
                   <a class="item__title title">MEET US IN PERSON</a>
                   <a class="item__hh hh">8776 Juniper Street
                      Unit #204
@@ -303,18 +303,18 @@
                </div>
 
                <div class="socials__item column">
-                  <div class="item__icon"><img src="/img/Mail.png" alt=""></div>
+                  <div class="item__icon"><img src="img/Mail.png" alt=""></div>
                   <a class="item__title title">The traditional way</a>
                   <a class="item__hh hh">Email us contact@minimal.com</a>
                </div>
 
                <div class="socials__item column">
-                  <div class="item__icon"><img src="/img/Heart.png" alt=""></div>
+                  <div class="item__icon"><img src="img/Heart.png" alt=""></div>
                   <a class="item__title_mb title">Let’s get social</a>
                   <div class="item__row row">
-                     <a href="#" class="item__si"><img src="/img/Fb.svg" alt=""></a>
-                     <a href="#" class="item__si"><img src="/img/Tw.svg" alt=""></a>
-                     <a href="#" class="item__si"><img src="/img/Linkdin.svg" alt=""></a>
+                     <a href="#" class="item__si"><img src="img/Fb.svg" alt=""></a>
+                     <a href="#" class="item__si"><img src="img/Tw.svg" alt=""></a>
+                     <a href="#" class="item__si"><img src="img/Linkdin.svg" alt=""></a>
                   </div>
                </div>
             </div>
@@ -326,7 +326,7 @@
    <section class="section black">
       <container class="container">
          <footer class="footer column">
-            <img src="/img/FootLogo.png" alt="">
+            <img src="img/FootLogo.png" alt="">
          </footer>
       </container>
    </section>
