--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
    </script>
    <noscript><div><img src="https://mc.yandex.ru/watch/104139102" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
    <!-- /Yandex.Metrika counter -->
+      <!-- Google tag (gtag.js) -->
+   <script async src="https://www.googletagmanager.com/gtag/js?id=G-5G6JNFVVBG"></script>
+   <script>
+     window.dataLayer = window.dataLayer || [];
+     function gtag(){dataLayer.push(arguments);}
+     gtag('js', new Date());
+   
+     gtag('config', 'G-5G6JNFVVBG');
+   </script>
 </head>
 
 <body>
@@ -350,5 +359,6 @@
 </body>
 
 </html>
+
 
 
